k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-pipeline
  name: backend-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-pipeline
  template:
    metadata:
      labels:
        app: backend-pipeline
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/cic-controlbook-dev/backend-pipeline:latest
          imagePullPolicy: Always
          name: backend-pipeline
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
