k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-pipeline
    app.kubernetes.io/component: backend-pipeline
    app.kubernetes.io/instance: backend-pipeline
    app.kubernetes.io/name: backend-pipeline
    app.kubernetes.io/part-of: spring-boot-version-one
    app.openshift.io/runtime-version: latest
  name: backend-pipeline
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend-pipeline
