k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend-pipeline
  name: backend-pipeline
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: backend-pipeline
    weight: 100
